--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dabot",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "new discord bot, it's marel's test subject",
   "main": "src/index.js",
   "scripts": {
@@ -18,7 +18,10 @@
   },
   "homepage": "https://github.com/MarelGuy/DaBot#readme",
   "dependencies": {
-    "discord.js": "^12.5.3"
+    "discord.js": "^12.5.3",
+    "express": "^4.17.1",
+    "fs": "^0.0.1-security",
+    "mongoose": "^5.12.5"
   },
   "devDependencies": {
     "dotenv": "^8.2.0",
