--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon -e js -r dotenv/config src/index.js"
+    "dev": "nodemon -e js -r dotenv/config src/index.js",
+    "start": "node src/index.js"
   },
   "repository": {
     "type": "git",
