--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dabot",
-  "version": "1.0.1",
+  "version": "1.1.0",
   "description": "new discord bot, it's marel's test subject",
   "main": "src/index.js",
   "scripts": {
@@ -19,8 +19,10 @@
   },
   "homepage": "https://github.com/MarelGuy/DaBot#readme",
   "dependencies": {
+    "@discordjs/opus": "^0.5.0",
     "discord.js": "^12.5.3",
     "express": "^4.17.1",
+    "ffmpeg-static": "^4.3.0",
     "fs": "^0.0.1-security",
     "mongoose": "^5.12.5"
   },
