--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/MarelGuy/DaBot#readme",
   "dependencies": {
     "@discordjs/opus": "^0.5.0",
+    "discord-tts": "^1.0.3",
     "discord.js": "^12.5.3",
     "express": "^4.17.1",
     "ffmpeg-static": "^4.3.0",
